Edited some styling

--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,10 @@ margin:0;
 }
 .nav-pills:hover
 {
-    text-decoration: underline;
-    transition: .3s ease-in-out;
+    
+    padding-left:2px;
+    transition: .2s ease-in-out;
+    font-weight: bolder;
 }
 .nav-pills a
 {
@@ -48,15 +50,26 @@ margin:0;
 
 .heading
 {
+    background-color: #FFFBEB;
     padding:2rem;
     padding-top: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .headericon
 {
   width:350px;
   max-width: 80%;  
+}
+.heading h2
+{
+    margin-top:6rem;
+    
+}
+.heading span
+{
+    color:#BE185D;
 }
