--- a/styles.css
+++ b/styles.css
@@ -160,3 +160,28 @@ footer h3
 {
     justify-content: center;
 }
+
+.projectsection
+{
+    width:100%;
+    padding:1rem;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.project-card
+{
+    border:2px solid #111;
+    border-radius: 0.5rem;
+    padding:0.5rem;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.project-card img
+{
+    width:100%;
+    max-width: 300px;
+    
+}
