--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,7 @@ footer h3
 .projectsection
 {
     width:100%;
+    box-sizing: border-box;
     padding:1rem;
     display: flex;
     justify-content: space-evenly;
