--- a/styles.css
+++ b/styles.css
@@ -169,10 +169,12 @@ footer h3
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    background-color: #F9FAFB;
 }
 .project-card
 {
     border:2px solid #111;
+    max-width:300px;
     border-radius: 0.5rem;
     padding:0.5rem;
     margin-bottom: 1rem;
@@ -184,5 +186,41 @@ footer h3
 {
     width:100%;
     max-width: 300px;
+    max-height:175px;
     
+}
+.project-card p
+{
+    font-size: 1rem;
+    text-align: justify;
+}
+.project-card span
+{
+    text-align: center;
+    font-size:0.80rem;
+}
+.sourcecodebtn
+{
+    padding:0.5rem;
+    margin-top:0.5rem;
+    border:1px solid var(--primaryTextColor);
+    border-radius: 0.5rem;
+    font-family:'Lato', sans-serif;
+    background-color: white;
+    color:var(--primaryTextColor);
+}
+.liveprojectbtn
+{
+    padding:0.5rem;
+    margin-top:0.5rem;
+    border-radius: 0.5rem;
+    font-family:'Lato', sans-serif;
+    background-color:var(--primaryColor);
+    
+}
+
+.project-card a
+{
+    text-decoration: none;
+    color: var(--primaryTextColor);
 }
