--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,18 @@ font-family: 'Lato', sans-serif;
 body
 {
 margin:0; 
+padding:0;
+box-sizing: border-box;
 }
 .container
 {
     padding:1rem;
+    position: fixed;
+    top:0%;
+    left: 0%;
+    width:100%;
+    z-index:100000;
+  
 }
 .navbar
 {
@@ -57,9 +65,10 @@ margin:0;
 
 .heading
 {
+    position: relative;
     background-color:var(--secondaryColor);
     padding:2rem;
-    padding-top: 5rem;
+    padding-top: 10rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -224,3 +233,4 @@ footer h3
     text-decoration: none;
     color: var(--primaryTextColor);
 }
+
