--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,8 @@ background-color: var(--lightModeColor);
     display: flex;
     flex-wrap: wrap;
     column-gap: 1rem;
+    justify-content: center;
+    align-items: center;
 }
 .icon__item
 {
